--- a/cart.html
+++ b/cart.html
@@ -1,123 +1,192 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
+  <head>
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <title>eMercado - Todo lo que busques está aquí</title>
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/4.3/examples/album/"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
+      rel="stylesheet"
+    />
 
-<head>
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <title>eMercado - Todo lo que busques está aquí</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/dropzone.css" rel="stylesheet" />
+  </head>
 
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="css/dropzone.css" rel="stylesheet">
-</head>
+  <body>
+    <nav class="site-header sticky-top py-1 bg-dark">
+      <script
+        async
+        defer
+        crossorigin="anonymous"
+        src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
+        nonce="8wEHU41i"
+      ></script>
+      <div
+        class="container d-flex flex-column flex-md-row justify-content-between"
+      >
+        <a class="py-2 d-none d-md-inline-block" href="#"></a>
+        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="categories.html"
+          >Categorías</a
+        >
+        <a class="py-2 d-none d-md-inline-block" href="products.html"
+          >Productos</a
+        >
+        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
 
-<body>
-  <nav class="site-header sticky-top py-1 bg-dark">
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
-      nonce="8wEHU41i"></script>
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="#"></a>
-      <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
-      <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-      <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-      <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-
-      <!--Menú despegable con Boostrap-->
-      <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
-          id="entrada"></a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
-          <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
+        <!--Menú despegable con Boostrap-->
+        <div class="dropdown">
+          <a
+            class="btn btn-secondary dropdown-toggle prueba"
+            role="button"
+            id="entrada"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+            class="py-2 d-none d-md-inline-block"
+            href="my-profile.html"
+            id="entrada"
+          ></a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="my-profile.html"
+              >Mi perfil<i class="fas fa-street-view"></i
+            ></a>
+            <a class="dropdown-item" href="#" onclick="signOut();"
+              >Cerrar sesión<i class="fas fa-sign-out-alt"></i
+            ></a>
+          </div>
+        </div>
+        <div id="icon-menu">
+          <a class="dropdown-item" href="home.html"
+            ><i class="fas fa-bars"></i
+          ></a>
         </div>
       </div>
-      <div id="icon-menu">
-        <a class="dropdown-item" href="home.html"><i class="fas fa-bars"></i></a>
+    </nav>
+    <br />
+    <br />
+
+    <!--Alerta para añadir Prod. al carrito-->
+    <div
+      class="alert container position-sticky top-0 alert-primary hide"
+      role="alert"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        fill="currentColor"
+        class="bi flex-shrink-0 me-2"
+        viewBox="0 0 16 16"
+        role="img"
+        aria-label="Success:"
+      >
+        <path
+          d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
+        />
+      </svg>
+      Producto añadido al carrito!
+    </div>
+    <div
+      class="alert container position-sticky top-0 alert-danger remove"
+      role="alert"
+    >
+      Producto removido!
+    </div>
+
+    <div>
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Producto</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Cantidad</th>
+          </tr>
+        </thead>
+        <tbody id="carrito"></tbody>
+      </table>
+    </div>
+
+    <div>
+      <table
+        class="container-fluid table table-dark table-striped text-center"
+        style="width: 50rem">
+        <thead>
+          <tr>
+            <th scope="col">Sub-total</th>
+            <th scope="col">Total</th>
+            <th scope="col"><i class="far fa-credit-card"></i></th> 
+          </tr>
+        </thead>
+        <tbody id="consumo__final"></tbody>
+      </table>
+    </div>
+
+    <footer class="bg-dark p-3 mt-5">
+      <p class="text-center mg-o text-muted">
+        eMercado - Todo lo que busques está aquí
+      </p>
+    </footer>
+
+    <div class="container p-5">
+      <div
+        class="alert alert-danger"
+        role="alert"
+        style="position: relative; width: auto; top: 0"
+      >
+        <h4 class="alert-heading">¡A trabajar! :)</h4>
+        <p>
+          Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y
+          Entrega 7 (Fecha de entrega: 14/11/2021).
+        </p>
+        <hr />
+        <p class="mb-0">
+          Para saber qué debes hacer, fijate en la actividad en CREA
+          correspondiente a esta entrega.
+        </p>
       </div>
     </div>
-  </nav>
-  <br>
-  <br>
-
-  <!--Alerta para añadir Prod. al carrito-->
-  <div class="alert container position-sticky top-0 alert-primary  hide" role="alert">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi flex-shrink-0 me-2"
-      viewBox="0 0 16 16" role="img" aria-label="Success:">
-      <path
-        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
-    </svg>
-    Producto añadido al carrito!
-  </div>
-  <div class="alert container position-sticky top-0 alert-danger remove" role="alert">
-    Producto removido!
-  </div>
-
-  <div class="carrito">
-    <table class="table table-dark table-striped">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Producto</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">Sub-total</th>
-          <th scope="col">IVA</th>
-          <th scope="col">Total</th>
-          <th scope="col"><i class="far fa-credit-card"></i></th>
-        </tr>
-      </thead>
-      <tbody id="carrito">
-      </tbody>
-    </table>
-
-  </div>
-
-
-  <footer class="bg-dark p-3 mt-5">
-    <p class="text-center mg-o text-muted"> eMercado - Todo lo que busques está aquí </p>
-  </footer>
-
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega:
-        14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.
-      </p>
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
-  </div>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
 
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-
-
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-    crossorigin="anonymous"></script>
-  <script src="js/login.js"></script>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/dropzone.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
-  <script src="js/cerrar.js"></script>
-</body>
-
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/login.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/dropzone.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/cerrar.js"></script>
+  </body>
 </html>
