--- a/categories.html
+++ b/categories.html
@@ -45,12 +45,12 @@
   <main role="main" class="pb-5">
     <div class="text-center p-4">
       <h2>Categorías</h2>
-      <p class="lead">Verás aquí todas las categorías del sitio.</p>
+      <p class="lead shadow">Verás aquí todas las categorías del sitio.</p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col text-right">
-          <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+          <div class="btn-group btn-group-toggle mb-4 shadow" data-toggle="buttons">
             <label class="btn btn-light active" id="sortAsc">
               <input type="radio" name="options" autocomplete="off" checked>A-Z
             </label>
@@ -78,8 +78,8 @@
             </div>
             <div class="col-3 p-0">
               <div class="btn-group" role="group">
-                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
-                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+                <button class="btn btn-light btn-block shadow" id="rangeFilterCount">Filtrar</button>
+                <button class="btn btn-link btn-sm shadow" id="clearRangeFilter">Limpiar</button>
               </div>
             </div>
           </div>
