--- a/product-info.html
+++ b/product-info.html
@@ -53,8 +53,8 @@
     <div class="container mt-5">
       <div class="text-center p-4">
         <h1>Descripción del Producto</h1>
-        <p class="lead">Encontrarás aquí toda la información sobre el vehículo.</p>
-        <p class="small alert-warning py-3"><strong>Nota: </strong>por simplicidad, cualquiera sea la categoría
+        <p class="lead  shadow">Encontrarás aquí toda la información sobre el vehículo.</p>
+        <p class="small alert-warning py-3  shadow"><strong>Nota: </strong>por simplicidad, cualquiera sea la categoría
           seleccionada previamente, siempre se visualizará la presente: <strong>Autos</strong>.</p>
       </div>
 
@@ -100,7 +100,7 @@
 
         <br>
         <div class="col-12"></div>
-        <div class="card">
+        <div class="card shadow">
           <div class="card-body">
             <h5>Comentar y calificar</h5>
             <div>
@@ -145,7 +145,7 @@
       <p class="float-right">
         <a href="#">Volver arriba</a>
       </p>
-      <p class="text-center">Este sitio forma parte de Desarrollo Web - JAP - 2020. Clickea <a target="_blank"
+      <p class="text-center shadow">Este sitio forma parte de Desarrollo Web - JAP - 2020. Clickea <a target="_blank"
           href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
     <hr>
